--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,21 +1,44 @@
 html,
 body {
-  overflow: auto;
-  height: 100%;
-  margin: 0;
+  height: 100vh;
   padding: 0;
+  margin: 0;
+}
+
+* {
   box-sizing: border-box;
 }
 
 .app-wrap {
   /* background: #e5eaf0; */
-  /* background: #f0e2f8; */
+  background: #f0e2f8;
   /* background: #c8b6d4; */
   /* background: #f2f2f0; */
-  background: #ededf5;
-  min-height: 100%;
+  /* background: #ededf5; */
+  height: 100vh;
+  max-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.app-wrap > * {
+  position: relative;
+}
+
+.app {
+  height: calc(100% - 40px);
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+}
+
+.app-inner {
+  width: 100%;
   height: 100%;
+  max-height: 100%;
+  overflow-y: auto;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /*align-items: center; */
 }
