--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -52,6 +52,22 @@ ul > li {
 .media-block {
   width: 100%;
   height: 100%;
+  position: relative;
+}
+
+.media-block__peer-name {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  background: #eac57d;
+  padding: 5px 10px;
+  border-radius: 15px;
+}
+
+.media-block__peer-name.self {
+  transform: translate(-50%, 0);
+  background: #f07488;
 }
 
 .media-elem {
