--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,9 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap");
+
 html,
 body {
   height: 100%;
   max-height: 100%;
   padding: 0;
   margin: 0;
+  font-family: "Nunito", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 * {
@@ -110,6 +115,24 @@ ul > li {
 
 .btn:hover:not(:disabled) {
   background: #7c5495;
+}
+
+.vr-input > input {
+  max-width: 100%;
+  width: 100%;
+  border: 0 none;
+  padding: 0 10px;
+  background: #fff;
+  color: #666;
+  border: 1px solid #e5e5e5;
+  transition: 0.2s ease-in-out;
+  transition-property: color, background-color, border;
+  outline: 0;
+
+  height: 40px;
+  vertical-align: middle;
+  display: inline-block;
+  font-size: 16px;
 }
 
 /* Палитра */
