--- a/client/src/components/reused/modal/Modal.styles.css
+++ b/client/src/components/reused/modal/Modal.styles.css
@@ -31,3 +31,26 @@
   flex: 0 1 0%;
   text-align: center;
 }
+
+.react-modal-content {
+  border: 1px solid rgb(204, 204, 204);
+  background: rgb(255, 255, 255);
+  overflow: unset;
+  border-radius: 4px;
+  outline: none;
+  padding: 15px;
+  width: 90%;
+  max-width: 476px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+}
+
+.react-modal-overlay {
+  position: fixed;
+  inset: 0px;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
