--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -33,25 +33,19 @@ ul > li {
 .app {
   display: grid;
   height: 100%;
-  /* padding: 0 15px; */
 }
 
-.app-inner {
-  display: grid;
-  grid-template-columns: 1fr;
-  align-items: center;
+.app__inner {
   background: #523857;
 }
 
 .media-streems {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
-
-  grid-gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 30%));
+  grid-gap: 40px;
   grid-auto-flow: dense;
-
-  justify-content: center; /* Центровка всей сетки */
-  justify-items: center; /* Центровка содержимого внутри ячеек */
+  justify-content: center;
+  justify-items: center;
 }
 
 .media-block {
@@ -87,12 +81,6 @@ ul > li {
   transform: scaleX(-1);
 }
 
-.center-content {
-  display: flex;
-  justify-content: center;
-  column-gap: 5px;
-}
-
 .btn {
   background: #806491;
   outline: none;
@@ -101,10 +89,19 @@ ul > li {
   cursor: pointer;
   border-radius: 3px;
   transition: 0.1s ease-in-out;
-
   padding: 0 40px;
   line-height: 53px;
   font-size: 14px;
+}
+
+.btn.btn_icon {
+  font-size: 16px;
+  font-size: 16px;
+  line-height: 1;
+  height: 40px;
+  display: inline-block;
+  width: 40px;
+  padding: 0;
 }
 
 .btn:disabled {
@@ -115,6 +112,10 @@ ul > li {
 
 .btn:hover:not(:disabled) {
   background: #7c5495;
+}
+
+.btn:active:not(:disabled) {
+  background: rgb(107, 71, 130);
 }
 
 .vr-input > input {
@@ -186,4 +187,169 @@ ul > li {
 
 .animate__zoomOut {
   animation-name: zoomOut;
+}
+
+.action-panel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px 0 20px;
+}
+
+.action-panel__center-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 10px;
+  flex: 1;
+}
+
+.dashboard,
+.room {
+  height: 100%;
+}
+
+.dashboard__content {
+  display: flex;
+  column-gap: 10px;
+}
+
+.center-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 5px;
+}
+
+.room {
+  --actin-height: 100px;
+  --row-gap: 20px;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows:
+    minmax(auto, calc(100vh - var(--actin-height) - var(--row-gap)))
+    100px;
+  row-gap: var(--row-gap);
+}
+
+.room__media {
+  overflow: auto;
+}
+
+.room__action,
+.room__media,
+.room__media .simplebar-content-wrapper {
+  display: grid;
+  align-items: center;
+}
+
+.media-module {
+  display: grid;
+  grid-template-rows: minmax(56%, auto) 50px;
+  grid-template-columns: auto;
+  grid-template-areas:
+    "preview"
+    "content";
+  grid-auto-flow: row;
+  grid-auto-columns: 1fr;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  padding: 30px;
+}
+.media-module__background {
+  background: hsl(290.32deg 26.73% 20.5%);
+  position: absolute;
+  width: calc(100% - 30px);
+  height: 90%;
+  bottom: 0;
+  right: 0;
+  border-radius: 10px;
+  transition: all 0.3s ease 0.1s;
+}
+.media-module__root {
+  grid-area: preview;
+  opacity: 0.99;
+  position: relative;
+  border-radius: 6px;
+  overflow: hidden;
+  display: grid;
+  align-items: stretch;
+}
+
+.media-module__content {
+  grid-area: content;
+  z-index: 1;
+  position: relative;
+  padding-left: 20px;
+  padding-top: 10px;
+  color: #fff;
+  font-size: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.media-module:hover .media-module__background {
+  width: 100%;
+  height: 100%;
+}
+
+.media-module__popup {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  padding: 1rem 1rem 1rem 30%;
+  z-index: 1;
+  cursor: pointer;
+  opacity: 0;
+  transition-duration: 0.45s;
+  transition-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
+  transition-property: opacity;
+  overflow: hidden;
+  border-radius: inherit;
+}
+
+.media-module__popup:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom left,
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 0.2),
+    transparent 49%
+  );
+  opacity: 0.8;
+  transition: inherit;
+  transform: scale(0.9);
+  transform-origin: top right;
+  transition-property: opacity, transform;
+}
+
+.media-module:hover .media-module__popup {
+  opacity: 1;
+}
+
+.media-module__actions {
+  display: flex;
+  column-gap: 15px;
+}
+
+.media-module__spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% -50%);
+  font-size: 40px;
+  color: #fff;
+}
+
+.simplebar-placeholder {
+  width: 100% !important;
 }
