--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -345,7 +345,7 @@ ul > li {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50% -50%);
+  transform: translate(0%, -50%);
   font-size: 40px;
   color: #fff;
 }
