--- a/client-v2/src/main.style.scss
+++ b/client-v2/src/main.style.scss
@@ -22,6 +22,7 @@ body {
   font-family: $font-family;
   background: $main-bg-color;
   font-size: $base-font-size;
+  color: $base-font-color;
   height: 100%;
   max-height: 100%;
   font-weight: 400;
