--- a/client-v2/src/_variables.style.scss
+++ b/client-v2/src/_variables.style.scss
@@ -2,3 +2,7 @@ $main-bg-color: #523857;
 $font-family: Nunito, serif;
 $base-font-size: 16px;
 $base-font-color: #fff;
+
+:root {
+  --font-family: Nunito, serif;
+}
