--- a/client-v2/src/components/shared/modal/Modal.scss
+++ b/client-v2/src/components/shared/modal/Modal.scss
@@ -17,6 +17,7 @@
   max-height: 85vh;
   padding: 25px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  color: #111;
 }
 
 .DialogContent:focus {
