switch cam and create the settrings component

--- a/client-v2/src/App.scss
+++ b/client-v2/src/App.scss
@@ -36,3 +36,15 @@ body {
   display: grid;
   height: 100%;
 }
+
+.flex-center-right {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+
+.flex-center-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
