--- a/client-v2/src/components/participant/Participant.styles.scss
+++ b/client-v2/src/components/participant/Participant.styles.scss
@@ -14,6 +14,18 @@
   align-items: center;
   justify-content: center;
 
+  &:not(.video-active) {
+    & .MediaRenderer {
+      display: none;
+    }
+  }
+
+  &.video-active {
+    & .ParticipantLabel {
+      display: none;
+    }
+  }
+
   & .ParticipantInfo {
     position: absolute;
     left: 50%;
