--- a/client-v2/src/components/shared/loader/Loader.styles.scss
+++ b/client-v2/src/components/shared/loader/Loader.styles.scss
@@ -1,10 +1,11 @@
-.ParticipantLabel {
-  position: absolute;
-  left: 0;
-  top: 0;
+.Loader {
   width: 100%;
   height: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  transform: translate(-50%, -50%);
 }
