--- a/client-v2/src/components/participant/Participant.styles.scss
+++ b/client-v2/src/components/participant/Participant.styles.scss
@@ -2,14 +2,11 @@
   position: relative;
   background: #3f2244;
   border-radius: 12px;
-
-  min-width: 0;
   min-height: 0;
-
+  max-height: 100%;
+  min-width: 100%;
   overflow: hidden;
-  // aspect-ratio: 4 / 3;
   aspect-ratio: 16 / 9;
-
   display: flex;
   align-items: center;
   justify-content: center;
