--- a/client-v2/src/components/room/Room.styles.scss
+++ b/client-v2/src/components/room/Room.styles.scss
@@ -13,9 +13,12 @@
   overflow: auto;
 
   display: grid;
-  align-content: space-evenly;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 0.5fr));
+  align-content: center;
+  // grid-template-columns: repeat(auto-fit, minmax(320px, 0.5fr));
+  grid-template-columns: repeat(auto-fit, minmax(calc(25vw - 40px), 0.5fr));
+  // grid-template-rows: 1fr 1fr 1fr 1fr;
+  // grid-auto-rows: minmax(0, 1fr);
   gap: 10px;
   margin-block: auto;
-  grid-auto-rows: min-content;
+  position: relative;
 }
