--- a/client-v2/src/components/participant/Participant.styles.scss
+++ b/client-v2/src/components/participant/Participant.styles.scss
@@ -32,5 +32,7 @@
     background-color: green;
     padding: 5px 45px;
     border-radius: 20px;
+    text-align: center;
+    font-size: 15px;
   }
 }
