--- a/client-v2/src/components/screen-presentation/ScreenSharePresentation.style.scss
+++ b/client-v2/src/components/screen-presentation/ScreenSharePresentation.style.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
   & video {
     object-fit: contain;
     width: 100%;
