Calculating the number of slides

--- a/client-v2/src/styles.css
+++ b/client-v2/src/styles.css
@@ -1,2 +1,11 @@
 @import "swiper/css";
 @import "swiper/css/pagination";
+
+:root {
+  --swiper-theme-color: #fff;
+  --swiper-pagination-bullet-inactive-opacity: 0.3;
+}
+
+.swiper-pagination-bullet {
+  background: #cdcdcd;
+}
