--- a/client-v2/src/components/action-panel/ActionPanel.styles.scss
+++ b/client-v2/src/components/action-panel/ActionPanel.styles.scss
@@ -1,12 +1,12 @@
 .ActionsPanel {
   flex: 0 0 auto;
   height: 80px;
-  // border: 1px solid #cdcdcd;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 15px;
   padding: 0 15px;
+  min-width: 0;
   & > * {
     display: flex;
     align-items: center;
@@ -33,5 +33,11 @@
   &:disabled {
     background-color: #414040;
     cursor: auto;
+  }
+}
+
+@media (max-width: 585px) {
+  .mobile-hidden {
+    display: none;
   }
 }
