--- a/client-v2/src/components/participant-label/ParticipantLabel.styles.scss
+++ b/client-v2/src/components/participant-label/ParticipantLabel.styles.scss
@@ -7,4 +7,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  & > * {
+    width: 20%;
+    max-width: 150px;
+    height: auto;
+  }
 }
