--- a/client-v2/src/components/room/Room.styles.scss
+++ b/client-v2/src/components/room/Room.styles.scss
@@ -16,8 +16,8 @@
   position: relative;
 }
 
-.MediaSlider {
-  width: 100%;
+.MediaSlider.swiper {
+  width: calc(100% - 20px);
   height: 100%;
 }
 
@@ -26,5 +26,26 @@
   gap: 10px;
   margin-block: auto;
   align-content: center;
-  grid-template-columns: repeat(auto-fit, minmax(calc(25vw - 40px), 0.5fr));
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(calc((100% / 4) - 30px), 0.5fr)
+  );
+}
+
+@media (max-width: 1280px) {
+  .MediaSlide.swiper-slide {
+    grid-template-columns: repeat(
+      auto-fit,
+      minmax(calc((100% / 3) - 20px), 0.5fr)
+    );
+  }
+}
+
+@media (max-width: 578px) {
+  .MediaSlide.swiper-slide {
+    grid-template-columns: 1fr;
+  }
+  .MediaSlider.swiper {
+    padding-right: 0;
+  }
 }
