--- a/client-v2/src/components/shared/modal/Modal.scss
+++ b/client-v2/src/components/shared/modal/Modal.scss
@@ -18,6 +18,7 @@
   padding: 25px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
   color: #111;
+  z-index: 3;
 }
 
 .DialogContent:focus {
