--- a/client-v2/src/components/room/Room.styles.scss
+++ b/client-v2/src/components/room/Room.styles.scss
@@ -44,6 +44,7 @@
 @media (max-width: 578px) {
   .MediaSlide.swiper-slide {
     grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
   }
   .MediaSlider.swiper {
     padding-right: 0;
