--- a/client-v2/src/components/dashboard/Dashboard.scss
+++ b/client-v2/src/components/dashboard/Dashboard.scss
@@ -6,6 +6,7 @@
   &__actions {
     display: flex;
     justify-content: center;
-    column-gap: 10px;
+    gap: 10px;
+    flex-wrap: wrap;
   }
 }
