--- a/client-v2/src/components/participant/Participant.styles.scss
+++ b/client-v2/src/components/participant/Participant.styles.scss
@@ -1,7 +1,7 @@
 .Participant {
   position: relative;
   background: #3f2244;
-  border-radius: 12px;
+  border-radius: 6px;
   min-height: 0;
   max-height: 100%;
   min-width: 100%;
@@ -33,9 +33,25 @@
     padding: 5px 25px;
     border-radius: 20px;
     text-align: center;
-    font-size: 18px;
+    font-size: 14px;
     display: flex;
     align-items: center;
     gap: 8px;
+  }
+}
+
+@media (max-width: 900px) {
+  .Participant {
+    & .ParticipantInfo {
+      bottom: 10px;
+      font-size: 12px;
+      padding: 5px 15px;
+    }
+  }
+}
+
+@media (max-width: 578px) {
+  .Participant {
+    aspect-ratio: auto;
   }
 }
