--- a/client-v2/src/components/participant/Participant.styles.scss
+++ b/client-v2/src/components/participant/Participant.styles.scss
@@ -48,10 +48,20 @@
     padding: 5px 25px;
     border-radius: 20px;
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     display: flex;
     align-items: center;
     gap: 8px;
+    max-width: 90%;
+    & > .ParticipantInfoMic {
+      flex: 0 0 auto;
+      display: flex;
+    }
+    & > .ParticipantInfoName {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
   }
 
   & .LowSignalBlock {
