--- a/client-v2/src/components/action-panel/ActionPanel.styles.scss
+++ b/client-v2/src/components/action-panel/ActionPanel.styles.scss
@@ -36,6 +36,18 @@
   }
 }
 
+.CamOnAndReverse {
+  position: relative;
+}
+
+.CamReverse {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  bottom: calc(100% + 5px);
+}
+
 @media (max-width: 585px) {
   .mobile-hidden {
     display: none;
