--- a/client-v2/src/components/room/Room.styles.scss
+++ b/client-v2/src/components/room/Room.styles.scss
@@ -7,7 +7,7 @@
 .MediaCanvas {
   flex: 1 0 0%;
   width: 100%;
-  padding: 20px;
+  padding: 20px 0 20px 0;
   min-height: 0;
   max-height: calc(100vh - 80px);
   display: grid;
