--- a/client-v2/src/App.scss
+++ b/client-v2/src/App.scss
@@ -28,7 +28,7 @@ body {
   font-family: $font-family;
   background: $main-bg-color;
   font-size: $base-font-size;
-  color: $base-font-color;
+  color: $main-font-color;
   height: 100%;
   max-height: 100%;
   font-weight: 400;
