fix mobile peers in slide

--- a/client-v2/src/components/room/Room.styles.scss
+++ b/client-v2/src/components/room/Room.styles.scss
@@ -45,7 +45,9 @@
 @media (max-width: 578px) {
   .MediaSlide.swiper-slide {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
+    // grid-template-rows: repeat(3, 1fr);
+    align-content: center;
+    grid-auto-rows: 1fr;
   }
   .MediaSlider.swiper {
     padding-right: 0;
