--- a/client-v2/src/components/screen-presentation/ScreenSharePresentation.style.scss
+++ b/client-v2/src/components/screen-presentation/ScreenSharePresentation.style.scss
@@ -4,14 +4,36 @@
   height: 100%;
   left: 0;
   top: 0;
-  background: #111;
-  display: flex;
   align-items: center;
   justify-content: center;
+  background: #0e1621;
+  transition: all 0.2s;
   z-index: 1;
+  &.collapsed {
+    width: 200px;
+    height: 200px;
+    top: 100%;
+    transform: translateY(-100%);
+    border-radius: 6px;
+  }
   & video {
     object-fit: contain;
     width: 100%;
     height: 100%;
+  }
+}
+
+.ScreenShareControl {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  top: 10px;
+  right: 18px;
+  & button {
+    cursor: pointer;
+    color: #cdcdcd;
+    &:hover {
+      color: #fff;
+    }
   }
 }
