--- a/client-v2/src/components/peers-list/PeersList.style.scss
+++ b/client-v2/src/components/peers-list/PeersList.style.scss
@@ -1,8 +1,17 @@
+.PeersListContainer {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  max-height: 300px;
+}
+
 .ListItem {
   display: flex;
   align-items: center;
   gap: 5px;
   margin-bottom: 5px;
+  padding-right: 5px;
 }
 
 .BoxIcon {
