--- a/client-v2/src/components/shared/popover/Popover.styles.scss
+++ b/client-v2/src/components/shared/popover/Popover.styles.scss
@@ -6,7 +6,8 @@
   border-radius: 4px;
   padding: 10px;
   // padding-top: 20px;
-  width: 260px;
+  width: 270px;
+  padding-right: 5px;
   background-color: var(--slate-800);
   box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
     hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
@@ -39,10 +40,10 @@
 
 .PopoverContentInner {
   width: 100%;
-  height: 100%;
-  max-height: 400px;
-  min-height: 0;
-  overflow: auto;
+  // height: 100%;
+  // max-height: 50px;
+  // min-height: 0;
+  // overflow: auto;
 }
 
 .PopoverClose {
